Fix: User verification
