# packages/shared-models/src/error.type.ts
@@ -1,6 +1,6 @@
 type APIErrorCode =
     | 'ERR_UNKNOWN'
-    | 'ERR_TOKEN_MISSING_IN_HEADER'
+    | 'ERR_TOKEN_MISSING_IN_HEADER_OR_REQ_QUERY'
     | 'ERR_TOKEN_INVALID'
     | 'ERR_TOKEN_SUBJECT_INVALID'
     | 'ERR_PERMISSION_DENIED'
